--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-app-version"
-    version="0.1.9">
+    id="cordova-plugin-app-version-xfx"
+    version="0.1.10">
 
     <name>AppVersion</name>
     <description>
@@ -20,7 +20,7 @@
     </engines>
 
     <js-module src="www/AppVersionPlugin.js">
-       <clobbers target="cordova.getAppVersion" />
+       <clobbers target="cordova.plugins.getAppVersion" />
     </js-module>
 
     <!-- android -->
